# ghostscale

./: README.md  pyproject.toml  setup.py
ghostscale/: __init__.py  cli.py  config.py  tailscale.py  wrapper.py
